[tool.poetry]
authors = ["Luis Felipe Sánchez-Heres <sanchezheresluis@hotmail.com>"]
description = "An event identification and trajectory simplification method based on behaviour identification and translation."
license = "Luis Felipe Sánchez-Heres"
name = "epp"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.9.5"

matplotlib = "^3.4.3"
numpy = "^1.21.4"
nvector = "^0.7.7"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
